--- a/css/style.css
+++ b/css/style.css
@@ -172,17 +172,17 @@ section.three .right div{
     -moz-border-radius: 30px 30px 0 0 ;
     -ms-border-radius: 30px 30px 0 0 ;
     -o-border-radius: 30px 30px 0 0 ;
-    clip-path: circle(0% at 50% 50%);
-    transition: .7s;
-    -webkit-transition: .7s;
-    -moz-transition: .7s;
-    -ms-transition: .7s;
-    -o-transition: .7s;
+    /*clip-path: circle(0% at 50% 50%);
+    */transition: .5s;
+    -webkit-transition: .5s;
+    -moz-transition: .5s;
+    -ms-transition: .5s;
+    -o-transition: .5s;
 } 
-section.three .right:hover div{
+/* section.three .right:hover div{
     background-color: rgba(255, 255, 255, 0.358);
     clip-path: circle(100% at 50% 50%);
-}
+} */
 
 
 /* table  */
